<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="TwinSAFE" Id="{fabf99ba-2961-464c-9201-f101c13cec49}">
    <Declaration><![CDATA[VAR_GLOBAL
	SafeRUN		AT%Q*	: BOOL := TRUE ;
	SafeErrAck	AT%Q*	: BOOL ;
	
		
	IN_FaultReset	AT%I*	: BOOL ;
	IN_EDM			AT%I*	: BOOL ;
	OUT_STO			AT%I*	: BOOL ;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>